ENH: Replace groupwise registration with ANTsPy version

--- a/ANTsRegistration/Resources/UI/ANTsRegistration.ui
+++ b/ANTsRegistration/Resources/UI/ANTsRegistration.ui
@@ -23,7 +23,7 @@
       <enum>QTabWidget::North</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="pairwiseTab">
       <attribute name="title">
@@ -483,14 +483,14 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="2" column="0">
         <widget class="QLabel" name="label_20">
          <property name="text">
           <string>Input directory</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="2" column="1">
         <widget class="ctkDirectoryButton" name="inputDirectoryButton">
          <property name="caption">
           <string/>
@@ -500,14 +500,14 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
+       <item row="3" column="0">
         <widget class="QLabel" name="label_19">
          <property name="text">
           <string>Output Directory</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
+       <item row="3" column="1">
         <widget class="ctkDirectoryButton" name="outputDirectoryButton">
          <property name="directory">
           <string>.</string>
@@ -517,10 +517,24 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="0" colspan="2">
+       <item row="4" column="0" colspan="2">
         <widget class="QPushButton" name="runGroupRegistrationButton">
          <property name="text">
           <string>Register</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_24">
+         <property name="text">
+          <string>Tranform Type:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="groupTransformTypeComboBox">
+         <property name="editable">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
