--- a/ANTsRegistration/Resources/UI/ANTsRegistration.ui
+++ b/ANTsRegistration/Resources/UI/ANTsRegistration.ui
@@ -750,7 +750,7 @@
        <item row="1" column="1">
         <widget class="QLineEdit" name="filePatternLineEdit">
          <property name="text">
-          <string>-forwardWarp.nii.gz</string>
+          <string>forwardWarp.nii.gz</string>
          </property>
         </widget>
        </item>
