--- a/ANTsRegistration/Resources/UI/ANTsRegistration.ui
+++ b/ANTsRegistration/Resources/UI/ANTsRegistration.ui
@@ -738,17 +738,39 @@
            </widget>
           </item>
           <item>
-           <widget class="QLabel" name="label_21">
-            <property name="text">
-             <string>Rformula for regression</string>
+           <widget class="QFrame" name="frame">
+            <property name="frameShape">
+             <enum>QFrame::StyledPanel</enum>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLineEdit" name="formulaLineEdit">
-            <property name="text">
-             <string>log_jacobian ~ group</string>
+            <property name="frameShadow">
+             <enum>QFrame::Raised</enum>
             </property>
+            <layout class="QFormLayout" name="formLayout_10">
+             <item row="0" column="0">
+              <widget class="QLabel" name="label_21">
+               <property name="text">
+                <string>Rformula for regression</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QLineEdit" name="formulaLineEdit">
+               <property name="text">
+                <string>log_jacobian ~ group</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="label_30">
+               <property name="text">
+                <string>Factor for QValue computation</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <widget class="QComboBox" name="qValueComboBox"/>
+             </item>
+            </layout>
            </widget>
           </item>
          </layout>
